# filebytes

./: AUTHORS  README.md  setup.cfg  setup.py  test.py
binformats/: binary.py  ctypes_helper.py  elf.py  enum.py  mach_o.py  pe.py
filebytes/: __init__.py  binary.py  ctypes_helper.py  elf.py  enum.py  mach_o.py  oat.py  pe.py
samples/: sample_elf.py  sample_macho.py  sample_macho_fat.py  sample_pe.py
test-binaries/: dummy-macho-universal-x86-x86_64  dummy.c
