[metadata]
name = filebytes
author = Sascha Schirra
author_email = sashs@scoding.de
license = BSD-3-Clause
license_file = COPYING
description = Scripts to parse the following file formats - Executable and Linking Format (ELF), Portable Executable (PE), Mach-O and OAT (Android Runtime).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://scoding.de/filebytes-introduction/
classifiers =
    Topic :: Security
    Environment :: Console
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Intended Audience :: Developers

[options]
packages = filebytes
